--- a/index.html
+++ b/index.html
@@ -4,29 +4,40 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WishBsas</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
 
     <header>
-        <nav class="navtop">
-            <div class="navtop1">
-                <ul>
-                    <li><a class="indice" href=""><img src="./assets/img/Header/Categorias.png" alt="categorias"></a></li>
-                    <li><a class="logo" href="#"><img src="./assets/img/Header/Color logo.png" alt="Inicio"></a></li>
+        <nav class="navbar navbar-expand-lg bg-blue">
+            <div class="container-fluid">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <img src="./assets/img/header/Categorias.png" alt="">
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="./pages/remeras.html">Remeras</a></li>
+                        <li><a class="dropdown-item" href="#">Pantalones</a></li>
+                        <li><a class="dropdown-item" href="#">Sweater & Buzos</a></li>
+                        <li><a class="dropdown-item" href="#">Camperas</a></li>
+                    </ul>
+                    </li>
+                    <a class="navbar-brand" href="#"><img src="./assets/img/header/Color logo.png" alt=""></a>
                 </ul>
+                <form class="d-flex" role="search">
+                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-secondary" type="submit"><img src="./assets/img/header/Buscar.png" alt=""></button>
+                </form>
+                </div>
             </div>
-            <div class="navtop2">
-                <ul>
-                    <li><a class="busqueda" href=""><img src="./assets/img/Header/Buscar.png" alt="Buscar"></a></li>
-                    <li><a class="cuenta" href=""><img src="./assets/img/Header/Cuenta.png" alt="Cuenta"></a></li>
-                    <li><a class="favoritos"href=""><img src="./assets/img/Header/Lista de Favoritos.png" alt="Lista de Favoritos"></a></li>
-                    <li><a class="carrito" href=""><img src="./assets/img/Header/Carrito de Compras.png" alt="Carrito de Compra"></a></li>
-                </ul>
-            </div>
-        </nav>
+            </nav>
     </header>
-
     <main>
         <section>
             <article class="portada">
@@ -140,7 +151,8 @@
             </div>
         </nav>
     </footer>
-
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
 </body>
 
 </html>
