boost+nav+bodycss-index

--- a/index.html
+++ b/index.html
@@ -49,8 +49,9 @@
         <section>
             <div class="categoria1">
                 <article class="categoria1a">
-                    <li><a href="./pages/remeras.html"><img src="./assets/img/indexbody/categoriaa/categoria1a.jpg" alt="">REMERAS</a></li>
+                    <li><a href="./pages/remeras.html"><img src="./assets/img/indexbody/categoriaa/categoria1a.jpg" alt=""></a></li>
                 </article>
+                <button>Remeras</button>
                 <article class="categoria1b">
                         <li><a href=""><img src="./assets/img/indexbody/categoriab/categoria1b1.jpg" alt=""></a></li>
                         <li><a href=""><img src="./assets/img/indexbody/categoriab/categoria1b2.jpg" alt=""></a></li>
@@ -72,11 +73,13 @@
                 <article class="categoria2a">
                     <li><a href=""><img src="./assets/img/indexbody/categoriaa/categoria2a.jpg" alt="">PANTALONES</a></li>
                 </article>
+                <button>Pantalones</button>
             </div>
             <div class="categoria3">
                 <article class="categoria3a">
                     <li><a href=""><img src="./assets/img/indexbody/categoriaa/categoria3a.jpg" alt="">SWEATER & BUZOS</a></li>
                 </article>
+                <button>Swetaer&Buzos</button>
                 <article class="categoria3b">
                     <li><a href=""><img src="./assets/img/indexbody/categoriab/categoria3b1.jpg" alt=""></a></li>
                     <li><a href=""><img src="./assets/img/indexbody/categoriab/categoria3b2.jpg" alt=""></a></li>
@@ -98,10 +101,10 @@
                 <article class="categoria4a">
                     <li><a href=""><img src="./assets/img/indexbody/categoriaa/categoria4a.jpg" alt=""></a></li>
                 </article>
+                <button>Camperas</button>
             </div>
         </section>
     </main>
-
     <footer>
         <nav class="navbottom">
             <div class="ayuda">
