--- a/pages/remeras.html
+++ b/pages/remeras.html
@@ -36,68 +36,55 @@
                     <li><a href=""><img src="../assets/img/remeras/categorias/liso.jpg" alt=""></a>liso</li>
             </article>
             <article class="artremeras">
-                <ul>
                     <div>
                         <li><a href=""></a><img src="../assets/img/remeras/main/remera-lisa-escote-redondo.jpg" alt=""></li>
-                        <p>$500 Remera Lisa Escote Redondo</p>
-                        <button><img src="../assets/img/favoritosdesmarcado.png" alt=""></button>
+                        <p>$500 Remera Lisa Escote Redondo <button><img src="../assets/img/favoritosdesmarcado.png" alt=""></button></p>
                     </div>
                     <div>
                         <li><a href=""></a><img src="../assets/img/remeras/main/remera-estampada-cool.jpg" alt=""></li>
-                        <p>$500 Remera Estampada Cool</p>
-                        <button><img src="../assets/img/favoritosdesmarcado.png" alt=""></button>
+                        <p>$500 Remera Estampada Cool <button><img src="../assets/img/favoritosdesmarcado.png" alt=""></button></p>
                     </div>
                     <div>
                         <li><a href=""></a><img src="../assets/img/remeras/main/remera-morley-cartera.jpg" alt=""></li>
-                        <p>$500 Remera Morley Cartera</p>
-                        <button><img src="../assets/img/favoritosdesmarcado.png" alt=""></button>
+                        <p>$500 Remera Morley Cartera <button><img src="../assets/img/favoritosdesmarcado.png" alt=""></button></p>
                     </div>
                     <div>
                         <li><a href=""></a><img src="../assets/img/remeras/main/remera-bordada-flores.jpg" alt=""></li>
-                        <p>$500 Remera Bordada Flores</p>
-                        <button><img src="../assets/img/favoritosdesmarcado.png" alt=""></button>
+                        <p>$500 Remera Bordada Flores <button><img src="../assets/img/favoritosdesmarcado.png" alt=""></button></p>
                     </div>
                     <div>
                         <li><a href=""></a><img src="../assets/img/remeras/main/remera-bordada-zorro.jpg" alt=""></li>
-                        <p>$500 Remera Bordada Zorro</p>
-                        <button><img src="../assets/img/favoritosdesmarcado.png" alt=""></button>
+                        <p>$500 Remera Bordada Zorro <button><img src="../assets/img/favoritosdesmarcado.png" alt=""></button></p>
                     </div>
                     <div>
                         <li><a href=""></a><img src="../assets/img/remeras/main/remera-termica.jpg" alt=""></li>
-                        <p>$500 Remera Termica</p>
-                        <button><img src="../assets/img/favoritosdesmarcado.png" alt=""></button>
+                        <p>$500 Remera Termica <button><img src="../assets/img/favoritosdesmarcado.png" alt=""></button></p>
                     </div>
                     <div>
                         <li><a href=""></a><img src="../assets/img/remeras/main/remera-estampada-lucky.jpg" alt=""></li>
-                        <p>$500 Remera Estampada Lucky</p>
-                        <button><img src="../assets/img/favoritosdesmarcado.png" alt=""></button>
+                        <p>$500 Remera Estampada Lucky <button><img src="../assets/img/favoritosdesmarcado.png" alt=""></button></p>
                     </div>
                     <div>
                         <li><a href=""></a><img src="../assets/img/remeras/main/remera--bordada-ramos.jpg" alt=""></li>
-                        <p>$500 Remera Bordada Ramos</p>
-                        <button><img src="../assets/img/favoritosdesmarcado.png" alt=""></button>
+                        <p>$500 Remera Bordada Ramos <button><img src="../assets/img/favoritosdesmarcado.png" alt=""></button></p>
                     </div>
                     <div>
                         <li><a href=""></a><img src="../assets/img/remeras/main/remera escote v tachas.jpg" alt=""></li>
-                        <p>$500 Remera Escote V Tachas</p>
-                        <button><img src="../assets/img/favoritosdesmarcado.png" alt=""></button>
+                        <p>$500 Remera Escote V Tachas <button><img src="../assets/img/favoritosdesmarcado.png" alt=""></button></p>
                     </div>
                     <div>
                         <li><a href=""></a><img src="../assets/img/remeras/main/remera-bordada-estrellas.jpg" alt=""></li>
-                        <p>$500 Remera Bordada Estrella</p>
-                        <button><img src="../assets/img/favoritosdesmarcado.png" alt=""></button>
+                        <p>$500 Remera Bordada Estrella <button><img src="../assets/img/favoritosdesmarcado.png" alt=""></button></p>
                     </div>
                     <div>
                         <li><a href=""></a><img src="../assets/img/remeras/main/media-polera-lisa.jpg" alt=""></li>
-                        <p>$500 Media Polera Lisa</p>
-                        <button><img src="../assets/img/favoritosdesmarcado.png" alt=""></button>
+                        <p>$500 Media Polera Lisa <button><img src="../assets/img/favoritosdesmarcado.png" alt=""></button></p>
                     </div>
                     <div>
                         <li><a href=""></a><img src="../assets/img/remeras/main/remera-bordada-manga.jpg" alt=""></li>
                         <p>$500 Remera Bordada Manga</p>
                         <button><img src="../assets/img/favoritosdesmarcado.png" alt=""></button>
                     </div>
-                </ul>
             </article>
         </section>
     </main>
