--- a/pages/consultas.html
+++ b/pages/consultas.html
@@ -8,19 +8,15 @@
 </head>
 <body>
     <header>
-        <nav class="navtop">
-            <div class="navtop1">
-                <ul>
-                    <li><a class="indice" href=""><img src="../assets/img/Header/Categorias.png" alt="categorias"></a></li>
-                    <li><a class="logo" href="../index.html"><img src="../assets/img/Header/Color logo.png" alt="Inicio"></a></li>
-                </ul>
-            </div>
-            <div class="navtop2">
-                <ul>
-                    <li><a class="busqueda" href=""><img src="../assets/img/Header/Buscar.png" alt="Buscar"></a></li>
-                    <li><a class="cuenta" href=""><img src="../assets/img/Header/Cuenta.png" alt="Cuenta"></a></li>
-                    <li><a class="favoritos"href=""><img src="../assets/img/Header/Lista de Favoritos.png" alt="Lista de Favoritos"></a></li>
-                    <li><a class="carrito" href=""><img src="../assets/img/Header/Carrito de Compras.png" alt="Carrito de Compra"></a></li>
+        <nav>
+            <div>
+                <ul class="navtop">
+                    <li><img src="../assets/img/header/Color logo.png" alt="logo-inicio"></li>
+                    <li><a href="../index.html">Inicio</a></li>
+                    <li><a href="#">Remeras</a></li>
+                    <li><a href="">Pantalones</a></li>
+                    <li><a href="">Sweater&Buzos</a></li>
+                    <li><a href="">Camperas</a></li>
                 </ul>
             </div>
         </nav>
