--- a/index.html
+++ b/index.html
@@ -71,13 +71,13 @@
                     <li><a href=""><img src="./assets/img/indexbody/categoriab/categoria2b6.jpg" alt=""></a></li>
                 </article>
                 <article class="categoria2a">
-                    <li><a href=""><img src="./assets/img/indexbody/categoriaa/categoria2a.jpg" alt="">PANTALONES</a></li>
+                    <li><a href=""><img src="./assets/img/indexbody/categoriaa/categoria2a.jpg" alt=""></a></li>
                 </article>
                 <button>Pantalones</button>
             </div>
             <div class="categoria3">
                 <article class="categoria3a">
-                    <li><a href=""><img src="./assets/img/indexbody/categoriaa/categoria3a.jpg" alt="">SWEATER & BUZOS</a></li>
+                    <li><a href=""><img src="./assets/img/indexbody/categoriaa/categoria3a.jpg" alt=""></a></li>
                 </article>
                 <button>Swetaer&Buzos</button>
                 <article class="categoria3b">
@@ -103,6 +103,9 @@
                 </article>
                 <button>Camperas</button>
             </div>
+        </section>
+        <section>
+            <a class="whatsapp" href="https://wa.me/541168814857" target="_blank" ><img src="./assets/img/indexbody/iconos/whatsapp.png" alt=""></a>
         </section>
     </main>
     <footer>
