--- a/pages/consultas.html
+++ b/pages/consultas.html
@@ -13,7 +13,7 @@
                 <ul class="navtop">
                     <li><img src="../assets/img/header/Color logo.png" alt="logo-inicio"></li>
                     <li><a href="../index.html">Inicio</a></li>
-                    <li><a href="#">Remeras</a></li>
+                    <li><a href="./remeras.html">Remeras</a></li>
                     <li><a href="">Pantalones</a></li>
                     <li><a href="">Sweater&Buzos</a></li>
                     <li><a href="">Camperas</a></li>
@@ -24,27 +24,34 @@
     <main>
         <section class="consultas">
             <h1>CONSULTAS</h1>
-            <div class="whatsapp">
-                <img src="../assets/img/consultas/whatsapp.png" alt="whatsapp">
-            </div>    
-            <p><a href="https://wa.me/541168814857" target="_blank" class="contact-link" >+54 11 6881 4857</a></p>
-            <div class="mail">
-                <img src="../assets/img/consultas/mail.png" alt="mail">
+            <div class="consulta1">
+                <div class="whatsappc">
+                    <img src="../assets/img/consultas/whatsappc.png" alt="whatsapp">
+                </div>    
+                <p><a href="https://wa.me/541168814857" target="_blank" class="contact-link" >+54 11 6881 4857</a></p>
             </div>
-            <p>info@wishbsas.com.ar</p>
+            <div class="consulta2">
+                <div class="mail">
+                    <img src="../assets/img/consultas/mail.png" alt="mail">
+                </div>
+                <p>info@wishbsas.com.ar</p>
+            </div>
             <div>
-                <form action="">
+                <form class="formulario" action="">
                     <fieldset class="formulario-de-consulta">
                         <legend>Envianos tu consulta</legend>
                             <label for="nombre"></label>
                             <input type="text" name="" id="nombreyapellido" placeholder="nombre y apellido" required> 
                             <label for="email"></label>
                             <input type="email" id="email" placeholder="correo electronico" required>
-                            <textarea name="" id="areaconsulta" cols="30" rows="10" placeholder="escibi tu consulta"></textarea>
+                            <textarea name="" id="areaconsulta" cols="30" rows="30" placeholder="escribi tu consulta"></textarea>
                     </fieldset>
                     <input type="submit"> 
                 </form>
             </div>
+        </section>
+        <section>
+            <a class="whatsapp" href="https://wa.me/541168814857" target="_blank" ><img src="../assets/img/indexbody/iconos/whatsapp.png" alt=""></a>
         </section>
     </main>
     <footer>
