--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -33,6 +33,12 @@
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ab non alias sequi est at maiores mollitia veritatis accusamus a dolore facere pariatur in deleniti quo quos molestiae, corporis voluptatum nam?
             </p>
         </section>
+        <section>
+            <a class="whatsapp" href="https://wa.me/541168814857" target="_blank" ><img src="../assets/img/indexbody/iconos/whatsapp.png" alt=""></a>
+        </section>
+        <section class="videocorp">
+                <iframe width="1280" height="720" src="https://www.youtube.com/embed/wU8JWcicx9o" title="TEXTILES RG - VIDEO CORPORATIVO (2023)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </section>
     </main>
     <footer>
         <nav class="navbottom">
