--- a/pages/remeras.html
+++ b/pages/remeras.html
@@ -83,6 +83,9 @@
                     </div>
             </article>
         </section>
+        <section>
+            <a class="whatsapp" href="https://wa.me/541168814857" target="_blank" ><img src="../assets/img/indexbody/iconos/whatsapp.png" alt=""></a>
+        </section>
     </main>
     <footer>
         <nav class="navbottom">
