cambio-fotos-px

--- a/pages/remeras.html
+++ b/pages/remeras.html
@@ -24,12 +24,12 @@
     <main>
         <section>
             <article class="remerascategoria">
-                    <li><a href=""><img src="../assets/img/remeras/categorias/ver todo.jpg" alt=""></a>ver todo</li>
-                    <li><a href=""><img src="../assets/img/remeras/categorias/manga-corta.jpg" alt=""></a>manga corta</li>
-                    <li><a href=""><img src="../assets/img/remeras/categorias/manga-larga.jpg" alt=""></a>manga larga</li>
-                    <li><a href=""><img src="../assets/img/remeras/categorias/bordado.jpg" alt=""></a>bordado</li>
-                    <li><a href=""><img src="../assets/img/remeras/categorias/estampado.jpg" alt=""></a>estampado</li>
-                    <li><a href=""><img src="../assets/img/remeras/categorias/liso.jpg" alt=""></a>liso</li>
+                    <li class="vertodo"><a href=""><img src="../assets/img/remeras/categorias/ver todo.jpg" alt=""></a>ver todo</li>
+                    <li class="mangacorta"><a href=""><img src="../assets/img/remeras/categorias/manga-corta.jpg" alt=""></a>manga corta</li>
+                    <li class="mangalarga"><a href=""><img src="../assets/img/remeras/categorias/manga-larga.jpg" alt=""></a>manga larga</li>
+                    <li class="bordado"><a href=""><img src="../assets/img/remeras/categorias/bordado.jpg" alt=""></a>bordado</li>
+                    <li class="estampado"><a href=""><img src="../assets/img/remeras/categorias/estampado.jpg" alt=""></a>estampado</li>
+                    <li class="liso"><a href=""><img src="../assets/img/remeras/categorias/liso.jpg" alt=""></a>liso</li>
             </article>
             <article class="artremeras">
                     <div>
