--- a/index.html
+++ b/index.html
@@ -10,33 +10,36 @@
 <body>
 
     <header>
-        <nav class="navbar navbar-expand-lg bg-blue">
+        <nav class="navbar navbar-expand-lg bg-body-navbar">
             <div class="container-fluid">
+                <a class="navbar-brand" href="#"><img src="./assets/img/header/Color logo.png" alt=""></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+                    <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <a class="navbar-brand" href="#"><img src="./assets/img/header/Color logo.png" alt=""></a>
-                    <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        <img src="./assets/img/header/Categorias.png" alt="">
-                    </a>
-                    <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="./pages/remeras.html">Remeras</a></li>
-                        <li><a class="dropdown-item" href="#">Pantalones</a></li>
-                        <li><a class="dropdown-item" href="#">Sweater & Buzos</a></li>
-                        <li><a class="dropdown-item" href="#">Camperas</a></li>
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item bg-body-navbar">
+                            <a class="nav-link active" aria-current="page" href="#"></a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Categorias
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="./pages/remeras.html">Remeras</a></li>
+                                <li><a class="dropdown-item" href="#">Pantalones</a></li>
+                                <li><a class="dropdown-item" href="#">Sweater & Buzos</a></li>
+                                <li><a class="dropdown-item" href="#">Camperas</a></li>
+                            </ul>
+                        </li>
                     </ul>
-                    </li>
-                </ul>
                 <form class="d-flex" role="search">
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-secondary" type="submit"><img src="./assets/img/header/Buscar.png" alt=""></button>
+                    <button class="btn btn-outline-success" type="submit">Search</button>
                 </form>
                 </div>
             </div>
-            </nav>
+        </nav>
     </header>
     <main>
         <section>
@@ -125,7 +128,7 @@
                     <li><a href="./pages/nosotros.html">Nosotros</a></li>
                     <li><a href="./pages/sucursales.html">Sucursales</a></li>
                     <li><a href="">Trabaja con Nosotros</a></li>
-                    </ul>
+                </ul>
                 </div>            
             <div class="redes">
                 <ul>
