--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
         </section>
     </main>
     <footer>
-        <nav class="navbottom">
-            <div class="ayuda">
+        <nav class="navbottomI">
+            <div class="ayudaI">
                 <ul>
                     <h2>¿Necesitas Ayuda?</h2>    
                     <li><a href="">FAQ</a></li>
@@ -122,7 +122,7 @@
                     <li><a href="">Cambios & Devoluciones</a></li>
                 </ul>
             </div>
-            <div class="info">
+            <div class="infoI">
                 <ul>    
                     <h2>Mas Info</h2>
                     <li><a href="./pages/nosotros.html">Nosotros</a></li>
@@ -130,7 +130,7 @@
                     <li><a href="">Trabaja con Nosotros</a></li>
                 </ul>
                 </div>            
-            <div class="redes">
+            <div class="redesI">
                 <ul>
                     <h2>Redes</h2>
                     <li><a href="https://www.facebook.com/wishbsas" target="_blank"><img src="./assets/img/Footer/Logo Facebook.png" alt="facebook"></a></li>
