--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <section>
             <article class="portada">
                 <h1>TEMPORADA OTOÑO INVIERNO</h1>
-                <img src="./assets/img/Portada.jpg" alt="Portada">
+                <img src="./assets/img/portada.jpg" alt="Portada">
                 <button>ver todo</button>
             </article>
         </section>
@@ -133,9 +133,9 @@
             <div class="redesI">
                 <ul>
                     <h2>Redes</h2>
-                    <li><a href="https://www.facebook.com/wishbsas" target="_blank"><img src="./assets/img/Footer/Logo Facebook.png" alt="facebook"></a></li>
-                    <li><a href="https://www.instagram.com/wishbsas/" target="_blank"><img src="./assets/img/Footer/Logo Instagram.png" alt=""></a></li>
-                    <li><a href="https://ar.pinterest.com/" target="_blank"><img src="./assets/img/Footer/Logo Pinterest.png" alt="Pinterest"></a></li>
+                    <li><a href="https://www.facebook.com/wishbsas" target="_blank"><img src="./assets/img/footer/Logo Facebook.png" alt="facebook"></a></li>
+                    <li><a href="https://www.instagram.com/wishbsas/" target="_blank"><img src="./assets/img/footer/Logo Instagram.png" alt=""></a></li>
+                    <li><a href="https://ar.pinterest.com/" target="_blank"><img src="./assets/img/footer/Logo Pinterest.png" alt="Pinterest"></a></li>
                 </ul>
             </div>
         </nav>
