--- a/pages/consultas.html
+++ b/pages/consultas.html
@@ -76,9 +76,9 @@
             <div class="redes">
                 <ul>
                     <h2>Redes</h2>
-                    <li><a href="https://www.facebook.com/wishbsas" target="_blank"><img src="../assets/img/Footer/Logo Facebook.png" alt="facebook"></a></li>
-                    <li><a href="https://www.instagram.com/wishbsas/" target="_blank"><img src="../assets/img/Footer/Logo Instagram.png" alt=""></a></li>
-                    <li><a href="https://ar.pinterest.com/" target="_blank"><img src="../assets/img/Footer/Logo Pinterest.png" alt="Pinterest"></a></li>
+                    <li><a href="https://www.facebook.com/wishbsas" target="_blank"><img src="../assets/img/footer/Logo Facebook.png" alt="facebook"></a></li>
+                    <li><a href="https://www.instagram.com/wishbsas/" target="_blank"><img src="../assets/img/footer/Logo Instagram.png" alt=""></a></li>
+                    <li><a href="https://ar.pinterest.com/" target="_blank"><img src="../assets/img/footer/Logo Pinterest.png" alt="Pinterest"></a></li>
                 </ul>
             </div>
         </nav>
