--- a/pages/sucursales.html
+++ b/pages/sucursales.html
@@ -31,7 +31,9 @@
                     <li>Lunes a Viernes de 8:00hs a 17:00hs</li>
                     <li>Sabados de 8:00hs a 13:00hs</li>
                 </p>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3283.134423845758!2d-58.47765882256251!3d-34.62604315868044!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcc9929a880e19%3A0xb8fba3d1810be8f5!2sDr.%20Juan%20Felipe%20Aranguren%203112%2C%20C1406FXH%20CABA!5e0!3m2!1ses-419!2sar!4v1693502881370!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <div class="maparanguren">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3283.134423845758!2d-58.47765882256251!3d-34.62604315868044!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcc9929a880e19%3A0xb8fba3d1810be8f5!2sDr.%20Juan%20Felipe%20Aranguren%203112%2C%20C1406FXH%20CABA!5e0!3m2!1ses-419!2sar!4v1693502881370!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
             </div>
             <div class="campana">
                 <h2>Campana 621, CABA</h2>
@@ -40,7 +42,9 @@
                     <li>Lunes a Viernes de 8:30hs a 17:00hs</li>
                     <li>Sabados de 8:30hs a 13:00hs</li>
                 </p>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3283.1673069248277!2d-58.47756340000002!3d-34.625212099999985!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcc9932b993917%3A0x41896634df3d4e0a!2sCampana%20621%2C%20C1406%20CABA!5e0!3m2!1ses-419!2sar!4v1693503612259!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <div class="mapcampana">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3283.1673069248277!2d-58.47756340000002!3d-34.625212099999985!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcc9932b993917%3A0x41896634df3d4e0a!2sCampana%20621%2C%20C1406%20CABA!5e0!3m2!1ses-419!2sar!4v1693503612259!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
             </div>
         </section>
         <section>
