--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                             </a>
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="./pages/remeras.html">Remeras</a></li>
-                                <li><a class="dropdown-item" href="#">Pantalones</a></li>
+                                <li><a class="dropdown-item" href="./pages/pantalones.html">Pantalones</a></li>
                                 <li><a class="dropdown-item" href="#">Sweater & Buzos</a></li>
                                 <li><a class="dropdown-item" href="#">Camperas</a></li>
                             </ul>
