--- a/pages/remeras.html
+++ b/pages/remeras.html
@@ -14,7 +14,7 @@
                     <li><img src="../assets/img/header/Color logo.png" alt="logo-inicio"></li>
                     <li><a href="../index.html">Inicio</a></li>
                     <li><a href="#">Remeras</a></li>
-                    <li><a href="">Pantalones</a></li>
+                    <li><a href="../pages/pantalones.html">Pantalones</a></li>
                     <li><a href="">Sweater&Buzos</a></li>
                     <li><a href="">Camperas</a></li>
                 </ul>
