--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <article class="categoria1a">
                     <li><a href="./pages/remeras.html"><img src="./assets/img/indexbody/categoriaa/categoria1a.jpg" alt=""></a></li>
                 </article>
-                <button>Remeras</button>
+                <button><a href="./pages/remeras.html">Remeras</a></button>
                 <article class="categoria1b">
                         <li><a href=""><img src="./assets/img/indexbody/categoriab/categoria1b1.jpg" alt=""></a></li>
                         <li><a href=""><img src="./assets/img/indexbody/categoriab/categoria1b2.jpg" alt=""></a></li>
@@ -74,9 +74,9 @@
                     <li><a href=""><img src="./assets/img/indexbody/categoriab/categoria2b6.jpg" alt=""></a></li>
                 </article>
                 <article class="categoria2a">
-                    <li><a href=""><img src="./assets/img/indexbody/categoriaa/categoria2a.jpg" alt=""></a></li>
+                    <li><a href="./pages/pantalones.html"><img src="./assets/img/indexbody/categoriaa/categoria2a.jpg" alt=""></a></li>
                 </article>
-                <button>Pantalones</button>
+                <button><a href="./pages/pantalones.html">Pantalones</a></button>
             </div>
             <div class="categoria3">
                 <article class="categoria3a">
