--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <article class="portada">
                 <h1>TEMPORADA OTOÑO INVIERNO</h1>
                 <img src="./assets/img/portada.jpg" alt="Portada">
-                <button>ver todo</button>
+                <button class="buttonPrincipal">ver todo</button>
             </article>
         </section>
         <section>
