--- a/index.html
+++ b/index.html
@@ -28,15 +28,11 @@
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="./pages/remeras.html">Remeras</a></li>
                                 <li><a class="dropdown-item" href="./pages/pantalones.html">Pantalones</a></li>
-                                <li><a class="dropdown-item" href="#">Sweater & Buzos</a></li>
-                                <li><a class="dropdown-item" href="#">Camperas</a></li>
+                                <li><a class="dropdown-item" href="./pages/sweater&buzos.html">Sweater & Buzos</a></li>
+                                <li><a class="dropdown-item" href="./pages/camperas.html">Camperas</a></li>
                             </ul>
                         </li>
                     </ul>
-                <form class="d-flex" role="search">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success" type="submit">Search</button>
-                </form>
                 </div>
             </div>
         </nav>
