--- a/pages/remeras.html
+++ b/pages/remeras.html
@@ -15,8 +15,8 @@
                     <li><a href="../index.html">Inicio</a></li>
                     <li><a href="#">Remeras</a></li>
                     <li><a href="../pages/pantalones.html">Pantalones</a></li>
-                    <li><a href="">Sweater&Buzos</a></li>
-                    <li><a href="">Camperas</a></li>
+                    <li><a href="../pages/sweater&buzos.html">Sweater&Buzos</a></li>
+                    <li><a href="../pages/camperas.html">Camperas</a></li>
                 </ul>
             </div>
         </nav>
@@ -25,11 +25,11 @@
         <section>
             <article class="remerascategoria">
                     <li class="vertodo"><a href=""><img src="../assets/img/remeras/categorias/ver todo.jpg" alt=""></a>ver todo</li>
-                    <li class="mangacorta"><a href=""><img src="../assets/img/remeras/categorias/manga-corta.jpg" alt=""></a>manga corta</li>
-                    <li class="mangalarga"><a href=""><img src="../assets/img/remeras/categorias/manga-larga.jpg" alt=""></a>manga larga</li>
-                    <li class="bordado"><a href=""><img src="../assets/img/remeras/categorias/bordado.jpg" alt=""></a>bordado</li>
-                    <li class="estampado"><a href=""><img src="../assets/img/remeras/categorias/estampado.jpg" alt=""></a>estampado</li>
-                    <li class="liso"><a href=""><img src="../assets/img/remeras/categorias/liso.jpg" alt=""></a>liso</li>
+                    <li class="cat1"><a href=""><img src="../assets/img/remeras/categorias/manga-corta.jpg" alt=""></a>manga corta</li>
+                    <li class="cat2"><a href=""><img src="../assets/img/remeras/categorias/manga-larga.jpg" alt=""></a>manga larga</li>
+                    <li class="cat3"><a href=""><img src="../assets/img/remeras/categorias/bordado.jpg" alt=""></a>bordado</li>
+                    <li class="cat4"><a href=""><img src="../assets/img/remeras/categorias/estampado.jpg" alt=""></a>estampado</li>
+                    <li class="cat5"><a href=""><img src="../assets/img/remeras/categorias/liso.jpg" alt=""></a>liso</li>
             </article>
             <article class="artremeras">
                     <div>
