--- a/pages/pantalones.html
+++ b/pages/pantalones.html
@@ -15,8 +15,8 @@
                     <li><a href="../index.html">Inicio</a></li>
                     <li><a href="../pages/remeras.html">Remeras</a></li>
                     <li><a href="#">Pantalones</a></li>
-                    <li><a href="">Sweater&Buzos</a></li>
-                    <li><a href="">Camperas</a></li>
+                    <li><a href="../pages/sweater&buzos.html">Sweater&Buzos</a></li>
+                    <li><a href="../pages/camperas.html">Camperas</a></li>
                 </ul>
             </div>
         </nav>
@@ -25,11 +25,11 @@
         <section>
             <article class="pantalonescategoria">
                     <li class="vertodo"><a href=""><img src="../assets/img/pantalones/categorias/ver-todo.jpg" alt=""></a>ver todo</li>
-                    <li class="mangacorta"><a href=""><img src="../assets/img/pantalones/categorias/largo.jpg" alt=""></a>largos</li>
-                    <li class="mangalarga"><a href=""><img src="../assets/img/pantalones/categorias/estampado.jpg" alt=""></a>estampado</li>
-                    <li class="bordado"><a href=""><img src="../assets/img/pantalones/categorias/liso.jpg" alt=""></a>liso</li>
-                    <li class="estampado"><a href=""><img src="../assets/img/pantalones/categorias/corto.jpg" alt=""></a>corto</li>
-                    <li class="liso"><a href=""><img src="../assets/img/pantalones/categorias/calza.jpg" alt=""></a>calzas</li>
+                    <li class="cat1"><a href=""><img src="../assets/img/pantalones/categorias/largo.jpg" alt=""></a>largos</li>
+                    <li class="cat2"><a href=""><img src="../assets/img/pantalones/categorias/estampado.jpg" alt=""></a>estampado</li>
+                    <li class="cat3"><a href=""><img src="../assets/img/pantalones/categorias/liso.jpg" alt=""></a>liso</li>
+                    <li class="cat4"><a href=""><img src="../assets/img/pantalones/categorias/corto.jpg" alt=""></a>corto</li>
+                    <li class="cat5"><a href=""><img src="../assets/img/pantalones/categorias/calza.jpg" alt=""></a>calzas</li>
             </article>
             <article class="artpantalones">
                     <div>
