--- a/pages/sucursales.html
+++ b/pages/sucursales.html
@@ -15,8 +15,8 @@
                     <li><a href="../index.html">Inicio</a></li>
                     <li><a href="./remeras.html">Remeras</a></li>
                     <li><a href="../pages/pantalones.html">Pantalones</a></li>
-                    <li><a href="">Sweater&Buzos</a></li>
-                    <li><a href="">Camperas</a></li>
+                    <li><a href="../pages/sweater&buzos.html">Sweater&Buzos</a></li>
+                    <li><a href="../pages/camperas.html">Camperas</a></li>
                 </ul>
             </div>
         </nav>
