--- a/pages/camperas.html
+++ b/pages/camperas.html
@@ -23,7 +23,7 @@
     </header>
     <main>
         <section>
-            <article class="camperas">
+            <article class="mainCategoria">
                     <li class="vertodo"><a href=""><img src="../assets/img/camperas/categorias/ver-todo.jpg" alt=""></a>ver todo</li>
                     <li class="cat1"><a href=""><img src="../assets/img/camperas/categorias/deportivo.jpg" alt=""></a>deportivos</li>
                     <li class="cat2"><a href=""><img src="../assets/img/camperas/categorias/inflado.jpg" alt=""></a>inflados</li>
@@ -31,7 +31,7 @@
                     <li class="cat4"><a href=""><img src="../assets/img/camperas/categorias/sacos.jpg" alt=""></a>sacos</li>
                     <li class="cat5"><a href=""><img src="../assets/img/camperas/categorias/cuero.jpg" alt=""></a>cuero</li>
             </article>
-            <article class="artCamperas">
+            <article class="listaArticulos">
                     <div>
                         <li><a href=""></a><img src="../assets/img/camperas/main/bomber-rustico-bordado.jpg" alt=""></li>
                         <p>$1500 Bomber Bordado<button><img src="../assets/img/favoritosdesmarcado.png" alt=""></button></p>
