--- a/pages/pantalones.html
+++ b/pages/pantalones.html
@@ -23,7 +23,7 @@
     </header>
     <main>
         <section>
-            <article class="pantalonescategoria">
+            <article class="mainCategoria">
                     <li class="vertodo"><a href=""><img src="../assets/img/pantalones/categorias/ver-todo.jpg" alt=""></a>ver todo</li>
                     <li class="cat1"><a href=""><img src="../assets/img/pantalones/categorias/largo.jpg" alt=""></a>largos</li>
                     <li class="cat2"><a href=""><img src="../assets/img/pantalones/categorias/estampado.jpg" alt=""></a>estampado</li>
@@ -31,7 +31,7 @@
                     <li class="cat4"><a href=""><img src="../assets/img/pantalones/categorias/corto.jpg" alt=""></a>corto</li>
                     <li class="cat5"><a href=""><img src="../assets/img/pantalones/categorias/calza.jpg" alt=""></a>calzas</li>
             </article>
-            <article class="artpantalones">
+            <article class="listaArticulos">
                     <div>
                         <li><a href=""></a><img src="../assets/img/pantalones/main/palazo-crepe.jpg" alt=""></li>
                         <p>$700 Palazo Crepe<button><img src="../assets/img/favoritosdesmarcado.png" alt=""></button></p>
