--- a/pages/remeras.html
+++ b/pages/remeras.html
@@ -23,7 +23,7 @@
     </header>
     <main>
         <section>
-            <article class="remerascategoria">
+            <article class="mainCategoria">
                     <li class="vertodo"><a href=""><img src="../assets/img/remeras/categorias/ver todo.jpg" alt=""></a>ver todo</li>
                     <li class="cat1"><a href=""><img src="../assets/img/remeras/categorias/manga-corta.jpg" alt=""></a>manga corta</li>
                     <li class="cat2"><a href=""><img src="../assets/img/remeras/categorias/manga-larga.jpg" alt=""></a>manga larga</li>
@@ -31,7 +31,7 @@
                     <li class="cat4"><a href=""><img src="../assets/img/remeras/categorias/estampado.jpg" alt=""></a>estampado</li>
                     <li class="cat5"><a href=""><img src="../assets/img/remeras/categorias/liso.jpg" alt=""></a>liso</li>
             </article>
-            <article class="artremeras">
+            <article class="listaArticulos">
                     <div>
                         <li><a href=""></a><img src="../assets/img/remeras/main/remera-lisa-escote-redondo.jpg" alt=""></li>
                         <p>$500 Remera Lisa Escote Redondo <button><img src="../assets/img/favoritosdesmarcado.png" alt=""></button></p>
