--- a/pages/sweater&buzos.html
+++ b/pages/sweater&buzos.html
@@ -23,7 +23,7 @@
     </header>
     <main>
         <section>
-            <article class="sweaterBuzos">
+            <article class="mainCategoria">
                     <li class="vertodo"><a href=""><img src="../assets/img/sweater-buzos/categorias/ver-todo.jpg" alt=""></a>ver todo</li>
                     <li class="cat1"><a href=""><img src="../assets/img/sweater-buzos/categorias/liso.jpg" alt=""></a>lisos</li>
                     <li class="cat2"><a href=""><img src="../assets/img/sweater-buzos/categorias/bordados.jpg" alt=""></a>bordados</li>
@@ -31,7 +31,7 @@
                     <li class="cat4"><a href=""><img src="../assets/img/sweater-buzos/categorias/estampados.jpg" alt=""></a>estampados</li>
                     <li class="cat5"><a href=""><img src="../assets/img/sweater-buzos/categorias/sweater.jpg" alt=""></a>sweaters</li>
             </article>
-            <article class="artSweaterBuzos">
+            <article class="listaArticulos">
                     <div>
                         <li><a href=""></a><img src="../assets/img/sweater-buzos/main/buz-cartera-botones.jpg" alt=""></li>
                         <p>$900 Buzo Cartera Botones<button><img src="../assets/img/favoritosdesmarcado.png" alt=""></button></p>
