+sucursales+footer-sass

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             </div>
             <div class="categoria3">
                 <article class="categoria3a">
-                    <li><a href=""><img src="./assets/img/indexbody/categoriaa/categoria3a.jpg" alt=""></a></li>
+                    <li><a href="./pages/sweater&buzos.html"><img src="./assets/img/indexbody/categoriaa/categoria3a.jpg" alt=""></a></li>
                 </article>
                 <button>Swetaer&Buzos</button>
                 <article class="categoria3b">
@@ -98,7 +98,7 @@
                     <li><a href=""><img src="./assets/img/indexbody/categoriab/categoria4b6.jpg" alt=""></a></li>
                 </article>
                 <article class="categoria4a">
-                    <li><a href=""><img src="./assets/img/indexbody/categoriaa/categoria4a.jpg" alt=""></a></li>
+                    <li><a href="./pages/camperas.html"><img src="./assets/img/indexbody/categoriaa/categoria4a.jpg" alt=""></a></li>
                 </article>
                 <button>Camperas</button>
             </div>
