--- a/pages/consultas.html
+++ b/pages/consultas.html
@@ -24,13 +24,13 @@
     <main>
         <section class="consultas">
             <h1>CONSULTAS</h1>
-            <div class="consulta1">
+            <div class="opciones">
                 <div class="whatsappc">
                     <img src="../assets/img/consultas/whatsappc.png" alt="whatsapp">
                 </div>    
                 <p><a href="https://wa.me/541168814857" target="_blank" class="contact-link" >+54 11 6881 4857</a></p>
             </div>
-            <div class="consulta2">
+            <div class="opciones">
                 <div class="mail">
                     <img src="../assets/img/consultas/mail.png" alt="mail">
                 </div>
