--- a/pages/consultas.html
+++ b/pages/consultas.html
@@ -37,7 +37,7 @@
                 <p>info@wishbsas.com.ar</p>
             </div>
             <div>
-                <form class="formulario" action="">
+                <form action="">
                     <fieldset class="formulario-de-consulta">
                         <legend>Envianos tu consulta</legend>
                             <label for="nombre"></label>
