--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 <article class="categoria3a">
                     <li><a href="./pages/sweater&buzos.html"><img src="./assets/img/indexbody/categoriaa/categoria3a.jpg" alt=""></a></li>
                 </article>
-                <button>Swetaer&Buzos</button>
+                <button><a href="./pages/sweater&buzos.html">Sweater&Buzos</a></button>
                 <article class="categoria3b">
                     <li><a href=""><img src="./assets/img/indexbody/categoriab/categoria3b1.jpg" alt=""></a></li>
                     <li><a href=""><img src="./assets/img/indexbody/categoriab/categoria3b2.jpg" alt=""></a></li>
@@ -100,7 +100,7 @@
                 <article class="categoria4a">
                     <li><a href="./pages/camperas.html"><img src="./assets/img/indexbody/categoriaa/categoria4a.jpg" alt=""></a></li>
                 </article>
-                <button>Camperas</button>
+                <button><a href="./pages/camperas.html">Camperas</a></button>
             </div>
         </section>
         <section>
