--- a/index.html
+++ b/index.html
@@ -10,32 +10,21 @@
 <body>
 
     <header>
-        <nav class="navbar navbar-expand-lg bg-body-navbar">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="#"><img src="./assets/img/header/Color logo.png" alt=""></a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item bg-body-navbar">
-                            <a class="nav-link active" aria-current="page" href="#"></a>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+        <nav>
+            <div>
+                <ul class="navtop">
+                    <li><img src="./assets/img/header/Color logo.png" alt="logo-inicio"></li>
+                    <div class="dropdown">
+                        <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                             Categorias
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="./pages/remeras.html">Remeras</a></li>
-                                <li><a class="dropdown-item" href="./pages/pantalones.html">Pantalones</a></li>
-                                <li><a class="dropdown-item" href="./pages/sweater&buzos.html">Sweater & Buzos</a></li>
-                                <li><a class="dropdown-item" href="./pages/camperas.html">Camperas</a></li>
-                            </ul>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
+                        </button>
+                        <ul class="dropdown-menu dropdown-menu-dark">
+                            <li><a class="dropdown-item" href="./pages/remeras.html">Remeras</a></li>
+                            <li><a class="dropdown-item" href="./pages/pantalones.html">Pantalones</a></li>
+                            <li><a class="dropdown-item" href="./pages/sweater&buzos.html">Sweaters & Buzos</a></li>
+                            <li><a class="dropdown-item" href="./pages/camperas.html">Camperas</a></li>
+                        </ul>
+                    </div>
     </header>
     <main>
         <section>
