--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <main>
         <section>
             <article class="portada">
-                <h1>TEMPORADA OTOÑO INVIERNO</h1>
+                <h1 class="text-focus-in">TEMPORADA OTOÑO INVIERNO</h1>
                 <img src="./assets/img/portada.jpg" alt="Portada">
                 <button class="buttonPrincipal">ver todo</button>
             </article>
