--- a/pages/sweater&buzos.html
+++ b/pages/sweater&buzos.html
@@ -3,7 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pantalones-WishBsas</title>
+    <meta name="keywords" content="sweater liso, buzo oversize, buzo bordado, buzo letenjuela, buzo tacha, sweater largo">
+    <meta name="author" content="Ro.K">
+    <meta name="copyrigth" content="Wish BsAs">
+    <meta property="og:title" content="Wish BsAs">
+    <meta property="og:url" content=www.wishbsas.com.ar>
+    <meta property="og:description" content="Categoria Sweater & Buzos | WishBsas">
+    <title>Swetaers&Buzos | WishBsas</title>
+    <link rel="shortcut icon" href="../assets/img/header/Color logo.png" type="image/x-icon">
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
