--- a/index.html
+++ b/index.html
@@ -3,7 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WishBsas</title>
+    <meta name="keywords" content="wish, wishbsas, mayorista, zona, flores, avenida, avellaneda, indumentaria, femenina, ropa, mujer, mayor, reventa">
+    <meta name="description" content="Fabricacion y venta mayorista de Indumentaria Femenina, especializados en remeras basicas, bordadas, estampadas y detalles">
+    <meta name="author" content="Ro.K">
+    <meta name="copyrigth" content="Wish BsAs">
+    <meta property="og:title" content="Wish BsAs">
+    <meta property="og:url" content=www.wishbsas.com.ar>
+    <meta property="og:description" content="Venta mayorista de Indumentaria Femenina">
+    <title>Inicio | WishBsas</title>
+    <link rel="shortcut icon" href="./assets/img/header/Color logo.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
 </head>
