--- a/pages/consultas.html
+++ b/pages/consultas.html
@@ -3,7 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Consultas-Wishbsas</title>
+    <meta name="keywords" content="telefono, whatsapp, mensaje, mail, contactar">
+    <meta name="author" content="Ro.K">
+    <meta name="copyrigth" content="Wish BsAs">
+    <meta property="og:title" content="Wish BsAs">
+    <meta property="og:url" content=www.wishbsas.com.ar>
+    <meta property="og:description" content="Contactanos | WishBsas">
+    <title>Consultas | Wishbsas</title>
+    <link rel="shortcut icon" href="../assets/img/header/Color logo.png" type="image/x-icon">
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
